docs: 更新 README 并添加菜品更新脚本
- 重写 README，添加菜品管理说明
- 添加 npm run dishes 便捷命令
- 重命名菜品：蓝鳍金枪鱼 → 酱烤蓝鳍金枪鱼

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dishes": "vite build && echo '\n✅ 菜品已更新！请执行 git add . && git commit && git push 部署'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
